// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Color Picker renders field disabled 1`] = `
<div class="form-group" data-field-name="colorPicker">
  <div class="react-component-adapter">
    <div class="clay-color-picker"><input name="colorPicker" style="display: none;" type="text" value="000000">
      <div class="input-group clay-color">
        <div class="input-group-item input-group-item-shrink input-group-prepend">
          <div class="input-group-text"><button aria-label="Select a color" class="btn clay-color-btn dropdown-toggle" style="border-width: 0px; background: rgb(0, 0, 0); height: 28px; width: 28px;" title="000000" type="button"></button></div>
        </div>
        <div class="input-group-item input-group-append"><input aria-label="Color selection is 000000" type="text" class="form-control input-group-inset input-group-inset-before" value="000000"><label class="input-group-inset-item input-group-inset-item-before">#</label></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Field Color Picker renders field with helptext 1`] = `
<div class="form-group" data-field-name="colorPicker">
  <div class="react-component-adapter">
    <div class="clay-color-picker"><input name="colorPicker" style="display: none;" type="text" value="000000">
      <div class="input-group clay-color">
        <div class="input-group-item input-group-item-shrink input-group-prepend">
          <div class="input-group-text"><button aria-label="Select a color" class="btn clay-color-btn dropdown-toggle" style="border-width: 0px; background: rgb(0, 0, 0); height: 28px; width: 28px;" title="000000" type="button"></button></div>
        </div>
        <div class="input-group-item input-group-append"><input aria-label="Color selection is 000000" type="text" class="form-control input-group-inset input-group-inset-before" value="000000"><label class="input-group-inset-item input-group-inset-item-before">#</label></div>
      </div>
    </div>
  </div><span class="form-text">Helptext</span>
</div>
`;

exports[`Field Color Picker renders field with label 1`] = `
<div class="form-group" data-field-name="colorPicker"><label>Label </label>
  <div class="react-component-adapter">
    <div class="clay-color-picker"><input name="colorPicker" style="display: none;" type="text" value="000000">
      <div class="input-group clay-color">
        <div class="input-group-item input-group-item-shrink input-group-prepend">
          <div class="input-group-text"><button aria-label="Select a color" class="btn clay-color-btn dropdown-toggle" style="border-width: 0px; background: rgb(0, 0, 0); height: 28px; width: 28px;" title="000000" type="button"></button></div>
        </div>
        <div class="input-group-item input-group-append"><input aria-label="Color selection is 000000" type="text" class="form-control input-group-inset input-group-inset-before" value="000000"><label class="input-group-inset-item input-group-inset-item-before">#</label></div>
      </div>
    </div>
  </div>
</div>
`;
